<resources>
    <string name="app_name">Менеджер студетов</string>
    <string name="regNewUser">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="regPasswordConfirm"><font size="14">Подтвердите пароль</font></string>
    <string name="regButtonConfirm">Регистрация</string>
    <string name="register">Регистрация</string>
    <string name="appTitle">Менеджер студентов</string>
    <string name="loginTaken">Логин уже используется</string>
    <string name="lOpInvalid">Некорректный логин или пароль</string>
    <string name="regSuccess">Пользователь сохранен</string>
    <string name="passwordReq">Минимум 6 символов</string>
    <string name="enter">Войти</string>
</resources>
